--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<apt.version>1.1.3</apt.version>
 		<jvm.enable-preview></jvm.enable-preview>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring-data-bom.version>2021.0.0-SNAPSHOT</spring-data-bom.version>
 	</properties>
 
 	<profiles>
