--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.0-M3</version>
+		<version>2.5.0-SNAPSHOT</version>
 	</parent>
 
 	<modules>
